--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,28 @@
 <h1>Listing users</h1>
-
+<% if notice %>
+<p id="notice"><%= notice %></p>
+<% end %>
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Hashed password</th>
-      <th>Salt</th>
       <th>Email</th>
       <th>Phone</th>
       <th>Address</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.hashed_password %></td>
-        <td><%= user.salt %></td>
-        <td><%= user.email %></td>
-        <td><%= user.phone %></td>
-        <td><%= user.address %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= user.name %></td>
+      <td><%= user.email %></td>
+      <td><%= user.phone %></td>
+      <td><%= user.address %></td>
+      <td><%= link_to 'Show', user %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
